eliminate the tedious works of handling communications errors and 
parsing JSON results.

Android and Python Desktop application developers can access 
remote SQL databases and/or SQL databases in the cloud by simply 
including standard JDBC calls in their code, just like 
they would for a local database.

The AceQL Python Client SDK is licensed under the Apache 2.0
License.


AceQL Python Client SDK - Version 3.2.1 - 21-Jul-2020
-----------------------------------------------------

What's New
- Add remaining refactor for compliance with 
  codacy.com best practices.


AceQL Python Client SDK - Version 3.2 - 17-Jul-2020
----------------------------------------------------

What's New
- Connection get_client_version() is now static.
- Code has been refactored in order to follow
  codacy.com best practices.


AceQL Python Client SDK - Version 3.1.1 - 09-Jun-2020
----------------------------------------------------

Bugs fixed:
- On SELECT, a SQL type to be decoded as float value would be rendered
  as a string value. This has been fixed.

AceQL Python Client SDK - Version 3.1. - 03-Jun-2020
----------------------------------------------------

What's New:
- AceQL allows now client supplementary authentication without a password
  using directly an existing AceQL Session ID.
   his has been asked by our users, because some working environments
  (Intranet, etc.) may require that the client user authenticates himself
  without a password.


AceQL Python Client SDK - Version 3.0.1 - 20-Apr-2020
-----------------------------------------------------

What's New:
- The faster ijson JSON parser is now used to retrieve 'row_count'.
- Clean long_description has been added to setup.py.


AceQL Python Client SDK - Version 3.0 - 18-Apr-2020
---------------------------------------------------

What's New:
- The new metadata API allows downloading a remote database schema
  in HTML or text format, to get a remote database main properties,